# ros_custom_controller

./: CMakeLists.txt  README.md  package.xml
action/: ControllerTrajectory.action
include/ros_controller_base/: ControllerBase.hpp  ControllerFrameBase.hpp
include/ros_controller_base/FeedbackController/: FeedbackControllerBase.hpp
include/ros_controller_base/ModelPredictiveController/: DeltaInputFormulationBase.hpp  MPC_Base.hpp  ModelPredictiveControllerBase.hpp  TrajectoryTrackingBase.hpp
include/ros_controller_base/RobotContainer/: RobotContainerBase.hpp  RobotModuleContainerBase.hpp
include/ros_custom_controller/: ControllerBase.hpp  ControllerFrameBase.hpp
include/ros_custom_controller/FeedbackController/: FeedbackControllerBase.hpp
include/ros_custom_controller/ModelPredictiveController/: DeltaInputFormulationBase.hpp  TrajectoryTrackingBase.hpp
include/ros_custom_controller/RobotContainer/: RobotContainerBase.hpp  RobotModuleContainerBase.hpp
include/ros_custom_controller_base/: ControllerBase.hpp  ControllerFrameBase.hpp
include/ros_custom_controller_base/FeedbackController/: FeedbackControllerBase.hpp
include/ros_custom_controller_base/ModelPredictiveController/: DeltaInputFormulationBase.hpp  ModelPredictiveControllerBase.hpp  TrajectoryTrackingBase.hpp
include/ros_custom_controller_base/RobotContainer/: RobotContainerBase.hpp  RobotModuleContainerBase.hpp
msg/: Input.msg  State.msg
robot_container/: CMakeLists.txt  README.md  package.xml
robot_container/include/robot_container/: RobotContainerBase.hpp  RobotModuleContainerBase.hpp
robot_container/srv/: SetState.srv
ros_custom_controller/: CMakeLists.txt  package.xml
ros_custom_controller/include/ros_custom_controller/: ControllerBase.hpp  ControllerFrameBase.hpp
ros_custom_controller/include/ros_custom_controller/FeedbackController/: FeedbackControllerBase.hpp  PIDControllerBase.hpp
ros_custom_controller/include/ros_custom_controller/ModelPredictiveController/: ModelPredictiveControllerBase.hpp  TrajectoryTrackingBase.hpp
ros_custom_controller/include/ros_custom_controller/OptimalController/: OptimalControllerBase.hpp
ros_custom_controller/include/ros_custom_controller/Planner/: TrajectoryGeneratorBase.hpp  TrajectoryManager.hpp
ros_custom_controller/test/: test.cpp
test/: test.cpp
