<?xml version="1.0"?>
<package format="2">
  <name>robot_container</name>
  <version>0.0.0</version>
  <description>This package...</description>

  <maintainer email="m.efetiryaki@gmail.com">Mehmet Efe Tiryaki</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>ros_node_utils</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>message_generation</depend>

  <depend>boost</depend>
  <depend>actionlib</depend>



  <!--depend>ooqp_eigen_interface</depend-->

  <!--depend>ooqp_catkin</depend-->
</package>
